--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,9 @@
                         </div>
                     </form>
                 {% endif %}
+                
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href={{ url_for('view_subreddits') }}>{{ _('View Subreddits') }}</a></li>
                     {% if not current_user.is_anonymous %}
                         <li><a href={{url_for('user', username=current_user.username)}}>{{ _('%(current_user)s', current_user=current_user.username) }}</a></li>
                     {% endif %}
