Fix comment translation; remove login requirement for translation; update config parameters; remove obsolete route; cleanup debug code

--- a/app/templates/thread.html
+++ b/app/templates/thread.html
@@ -38,7 +38,7 @@
             </tr>
             {% if comment.language and comment.language != g.locale %}
             <tr>
-                <td><a id="translate_comment_link{{ comment.id }}" href="javascript:translate('#comment{{ comment.id }}', '#comment{{ comment.id }}', '{{ g.locale }}', '#translate_comment_link{{ comment.id }}');">{{ _('Translate') }}</a></td>
+                <td><a id="translate_comment_link{{ comment.id }}" href="javascript:translate(['#comment{{ comment.id }}'], '{{ g.locale }}', '#translate_comment_link{{ comment.id }}');">{{ _('Translate') }}</a></td>
             </tr>
             {% endif %}
 
