--- a/app/templates/thread.html
+++ b/app/templates/thread.html
@@ -18,8 +18,8 @@
             <tr><td><span id="thread_body{{ thread.id }}">{{ thread.body }}</span></td></tr>
             <tr><td><span id="translated_thread_body{{ thread.id }}"></span></td></tr>
             <tr>
-                <td><a href={{ url_for('view_thread', thread_title=thread.title, is_upvote=1) }}>{{ _('Upvote') }}</a></td>
-                <td><a href={{ url_for('view_thread', thread_title=thread.title, is_upvote=-1) }}>{{ _('Downvote') }}</a></td>
+                <td><a href={{ url_for('view_thread', thread_title=thread.title, is_upvote=1) }}>{{ _('Upvote') }}</a>
+                    <a href={{ url_for('view_thread', thread_title=thread.title, is_upvote=-1) }}>{{ _('Downvote') }}</a></td>
             </tr>
             <tr><td>{{ _('%(num_upvotes)s upvotes', num_upvotes=thread.upvotes) }}</td></tr>
         </tbody>
@@ -33,8 +33,8 @@
         <table>
             <tr>
                 <td>{{ _('%(username)s', username=comment.user.username) }}</td>
-                <td>{{ _('%(num_upvotes)s upvotes', num_upvotes=comment.upvotes) }}</td>
-                <td>{{ _('%(date)s', date=moment(comment.date).fromNow()) }}</td>
+                <td style="padding:10px">{{ _('%(num_upvotes)s upvotes', num_upvotes=comment.upvotes) }}</td>
+                <td style="padding:10px">{{ _('%(date)s', date=moment(comment.date).fromNow()) }}</td>
             </tr>
             {% if comment.language and comment.language != g.locale %}
             <tr>
